server/sonar-web/src/main/less/style.less
/* ... */
.sonar-d3 .treemap-breadcrumbs {
  margin-top: 10px;
  padding-top: 7px;
  border-top: 1px solid #E6E6E6;
}

.sonar-d3 .treemap-breadcrumbs-item {
  color: @secondFontColor;

  & > [class^="icon-qualifier-"] { margin-right: 4px; }
}

.sonar-d3 .treemap-breadcrumbs-item + .treemap-breadcrumbs-item {
  margin-left: 10px;

  & > .icon-chevron-right { margin-right: 10px; }
}


/* ------------------- Admin pages ------------------- */

.admin-page-title {
  margin-bottom: 0px;
}

.admin-page-description {
  font-size: 85%;
  font-weight: normal;
  margin-bottom: 25px;
}


/* ------------------- Bubble popups ----------------- */

@popupArrowSize: 8px;

.bubble-popup {
  position: absolute;
  z-index: 100;
  margin-top: -16px;
  margin-left: @popupArrowSize;
  padding: 10px;
  border: 1px solid @barBorderColor;
  border-radius: 3px;
  .box-sizing(border-box);
  background-color: @white;
  box-shadow: @defaultShadow;
}

.bubble-popup-arrow,
.bubble-popup-arrow:after {
  position: absolute;
  display: block;
  .size(0, 0);
  border: @popupArrowSize solid transparent;
}

.bubble-popup-arrow {
  top: 15px;
  left: -@popupArrowSize;
  border-left-width: 0;
  border-right-color: @barBorderColor;

  &:after {
    content: " ";
    left: 1px;
    bottom: -@popupArrowSize;
    border-left-width: 0;
    border-right-color: @white;
  }
}

.bubble-popup-bottom {
  margin-top: @popupArrowSize;
  margin-left: -16px;

  .bubble-popup-arrow {
    top: -@popupArrowSize;
    left: 15px;
    border-left-width: @popupArrowSize;
    border-top-width: 0;
    border-right-color: transparent;
    border-bottom-color: @barBorderColor;

    &:after {
      left: -@popupArrowSize;
      bottom: -@popupArrowSize - 1px;
      border-left-width: @popupArrowSize;
      border-top-width: 0;
      border-right-color: transparent;
      border-bottom-color: @white;
    }
  }
}

.bubble-popup-bottom-right {
  .bubble-popup-bottom;
  margin-left: 0;
  margin-right: -8px;

  .bubble-popup-arrow {
    left: auto;
    right: 15px;
  }
}

.bubble-popup-container {
  max-width: 560px;
  max-height: 300px;
  overflow: auto;
}

.bubble-popup-title {
  margin-bottom: 5px;
  font-weight: 600;
}

.bubble-popup-section {
  width: 450px;
  padding-bottom: 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  &.fluid {
    width: auto;
    max-width: 450px;
  }
}

.bubble-popup-section + .bubble-popup-section,
.bubble-popup-section + .bubble-popup-title {
  margin-top: 10px;
}

.bubble-popup-list {
  margin-top: 5px;

  & > li { padding: 2px 0; }
}


@overlayPopupMargin: 20px;
@overlayPopupPadding: 40px;

.overlay-popup {
  position: fixed;
  z-index: 1200;
  top: @overlayPopupMargin;
  bottom: @overlayPopupMargin;
  left: @overlayPopupMargin;
  right: @overlayPopupMargin;
  padding: @overlayPopupPadding @overlayPopupPadding @overlayPopupPadding + 30px;
  background-color: #fff;
  overflow: scroll;
  box-shadow: 0 0 20px 15px rgba(0, 0, 0, 0.5);

  .modal-foot {
    position: fixed;
    z-index: 1201;
    bottom: @overlayPopupMargin;
    left: @overlayPopupMargin;
    right: @overlayPopupMargin;
  }
}

